<resources>
    <string name="app_name">AnimeList</string>
    <string name="mylist">My List</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="popular_this_season">Popular this Season</string>
    <string name="anime_image_description">Anime Image</string>
    <string name="anime_title">Anime Title</string>
    <string name="just_added">Just Added</string>
    <string name="all_time_popular">All Time Popular</string>
    <string name="upcoming_next_season">Upcoming Next Season</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="side_navigation_drawer_open">Side navigation drawer opened</string>
    <string name="side_navigation_drawer_close">Side navigation drawer closed</string>
    <string name="year">Year</string>
    <string name="season">Season</string>
    <string name="format">Format</string>
    <string name="status">Status</string>
    <string name="add_to_list">Add to List</string>
    <string name="tab_1">Overview</string>
    <string name="tab_2">Characters</string>
    <string name="tab_3">Episodes</string>
    <string name="tab_1_description">Overview of the general info of the anime</string>
    <string name="tab_2_description">A list of characters present in the anime</string>
    <string name="tab_3_description">A list of the episodes of the anime</string>
    <string name="average_rating">Avg. rating</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="anime_banner_description">Banner of the anime</string>
    <string name="anime_cover_description">Cover of the anime</string>
    <string name="anime_date_not_added">not yet added</string>
    <string name="current">Watching</string>
    <string name="planning">Plan to Watch</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="tv">TV</string>
    <string name="tv_short">TV Short</string>
    <string name="movie">Movie</string>
    <string name="special">Special</string>
    <string name="ova">OVA</string>
    <string name="ona">ONA</string>
    <string name="music">Music</string>
    <string name="any">Any</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="main">Main</string>
    <string name="supporting">Supporting</string>
    <string name="background">Background</string>
    <string name="zero">0</string>
    <string name="ten">10</string>
    <string name="episode_progress">Episode Progress</string>
    <string name="finish_date">Finish Date</string>
    <string name="save">Save</string>
    <string name="select_date">Select Date</string>
    <string name="sort">Sort</string>
    <string name="score">Score</string>
    <string name="score_desc">Score Descending</string>
    <string name="progress">Progress</string>
    <string name="progress_desc">Progress Descending</string>
    <string name="started_on">Started</string>
    <string name="started_on_desc">Started Descending</string>
    <string name="finished_on">Finished</string>
    <string name="finished_on_desc">Finished Descending</string>
    <string name="media_title_romaji">Title</string>
    <string name="media_title_romaji_desc">Title Descending</string>
    <string name="media_popularity">Popularity</string>
    <string name="media_popularity_desc">Popularity Descending</string>
    <string name="episode_abbreviation">ep.</string>
    <string name="total_anime">Total Anime</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="value">Value</string>
    <string name="days_watched">Days Watched</string>
    <string name="mean_score">Mean Score</string>
    <string name="standard_deviation">Standard Deviation</string>
    <string name="count">Count</string>
    <string name="hours_watched">Hours Watched</string>
    <string name="status_distribution">Status Distribution</string>
    <string name="character_name">Character Name</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="unknown">Unknown</string>
    <string name="no_description">No description</string>
    <string name="watch_for_year">Watched for Year</string>
    <string name="please_connect_to_the_internet">Please connect to the Internet.</string>
    <string name="you_are_offline">You\'re offline, check your connection.</string>
    <string name="retry">Retry</string>
</resources>