<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.Animelist.Background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/characterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_name"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:maxLines="2"
            android:ellipsize="end"/>

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterName"
            tools:srcCompat="@tools:sample/avatars"
            android:scaleType="centerCrop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/characterImage"
            style="@style/Theme.Animelist.Card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/characterGenderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/characterGenderValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/characterGenderLabel"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp"
                android:text="@string/unknown"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/characterAgeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characterGenderLabel" />

            <TextView
                android:id="@+id/characterAgeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/unknown"
                app:layout_constraintStart_toEndOf="@+id/characterAgeLabel"
                app:layout_constraintTop_toBottomOf="@+id/characterGenderValue"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/characterDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/characterAgeLabel"
                android:text="@string/description"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

