<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Theme.Animelist.Card">

    <ImageView
        android:id="@+id/animeEntryImage"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/animeEntryImage"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/animeEntryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/anime_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/AnimeEntryScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="5dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/AnimeEntryScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/score"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/editButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/animeEntryEpisodeProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/episode_abbreviation"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editButton" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/animeEntryEpisodeProgressIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:max="12"
            android:progress="0"
            app:layout_constraintBottom_toTopOf="@+id/animeEntryEpisodeProgress"
            app:layout_constraintEnd_toStartOf="@+id/editButton"
            app:layout_constraintStart_toStartOf="parent"
            app:trackThickness="12dp" />

        <ImageView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>